# ShopFlow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  shopflow.postman.json  zensical.toml
.claude/skills/: fastapi
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 0001_users.py  0002_products.py  0003_inventory.py  0004_orders.py  0005_payments.py  0006_notifications.py  0007_audit_logs.py
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  logging.py  redis_client.py  security.py
app/db/: __init__.py  session.py
app/middleware/: rate_limit.py  request_context.py
app/models/: __init__.py  audit_log.py  category.py  inventory.py  notification.py  order.py  payment.py  product.py  user.py
app/repositories/: category.py  notification.py  order.py  payment.py  product.py  user.py
app/schemas/: analytics.py  auth.py  category.py  notification.py  order.py  payment.py  product.py
app/services/: admin.py  analytics.py  audit.py  auth.py  category.py  inventory.py  login_throttle.py  notification.py  order.py  order_state.py  payment.py  product.py
app/workers/: queue.py  tasks.py
docs/: architecture.md  conventions.md  getting-started.md  index.md
docs/api/: auth.md  notifications.md  orders.md  overview.md  payments.md  products.md
docs/concepts/: auth.md  inventory.md  order-lifecycle.md  payments.md
docs/operations/: migrations.md  testing.md  workers.md
scripts/: export_postman.py
tests/: conftest.py
tests/api/: test_admin.py  test_auth.py  test_categories.py  test_inventory.py  test_notifications.py  test_orders.py  test_payments.py  (+1 more)
(+12 files in other folders)
