[project]
name = "shopflow"
version = "0.1.0"
description = "ShopFlow event-driven e-commerce backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.136.1,<0.138",
    "uvicorn[standard]>=0.32,<0.34",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<2.8",
    "arq>=0.26,<0.27",
    "redis>=5.2,<6",
    "python-jose[cryptography]>=3.3,<3.4",
    "python-multipart>=0.0.18,<0.1",
    "email-validator>=2.2,<3",
    "bcrypt>=4.2,<5",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<0.9",
    "ty>=0.0.1a1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.26",
    "pytest-cov>=6.0,<7",
    "httpx>=0.27,<0.29",
    "pre-commit>=4.0,<5",
    "zensical>=0.0.19,<0.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "ASYNC",
    "FAST",
    "S",
    "RUF",
]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:jose.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "app/workers/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
